# PKI-Client

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  deny.toml  install.sh
.cargo/: config.toml
.github/actions/rust-setup/: action.yml
.github/workflows/: ci.yml  crypto-validation.yml  daily-check.yml  interop.yml  release-check.yml  release.yml  runner-health.yml  scep-interop.yml  test-signing.yml
crates/pki-client/: Cargo.toml
crates/pki-client-output/: Cargo.toml
crates/pki-client-output/src/: cert.rs  format.rs  lib.rs  oid_registry.rs
crates/pki-client/src/: compat.rs  config.rs  main.rs  shell.rs  standalone.rs  util.rs
crates/pki-client/src/acme/: client.rs  jws.rs  mod.rs  types.rs
crates/pki-client/src/commands/: cert.rs  chain.rs  completions.rs  compliance.rs  convert.rs  crl.rs  csr.rs  dane.rs  diff.rs  est.rs  key.rs  mod.rs  pki.rs  probe.rs  revoke.rs  scep.rs  show.rs
crates/pki-client/src/commands/acme/: certonly.rs  csr.rs  helpers.rs  install.rs  mod.rs  protocol.rs  renew.rs  rollback.rs  status.rs
crates/pki-client/src/deployer/: apache.rs  backup.rs  iis.rs  mod.rs  nginx.rs
crates/pki-client/src/est/: client.rs  mod.rs  types.rs
crates/pki-client/src/scep/: client.rs  envelope.rs  mod.rs  response.rs  types.rs
crates/pki-client/tests/: cert_decode_tests.rs  cli_integration_tests.rs  csr_display.rs  key_show_algorithms.rs  malformed_input.rs  protocol_tests.rs  scope.rs
crates/pki-hierarchy/: Cargo.toml
crates/pki-hierarchy/src/: builder.rs  config.rs  error.rs  export.rs  lib.rs  preview.rs  topology.rs  validate.rs
crates/pki-probe/: Cargo.toml
crates/pki-probe/src/: lib.rs  lint.rs  tls.rs
crates/pki-probe/tests/: lint_tests.rs
docs/: demo.html  index.html  pki-demo-ketcham-labs-v1.cast.bak  pki-demo.cast
docs/demos/: cert-inspect.cast  hierarchy.cast  intro-chain-forge.cast  intro-decryption.cast  intro-matrix-rain.cast  intro-pixel-q.cast  intro-tls-handshake.cast  key-csr.cast  pki-enterprise-demo.cast  pki-flex-demo.cast  short-a-audit.cast  short-b-renewal.cast  short-c-migration.cast  short-d-build.cast  short-e-handoff.cast  short-f-vision.cast  signing-service.cast  story-a-audit.cast  story-b-incident.cast  story-b-renewal.cast  story-c-migration.cast  story-d-build.cast  story-d-pipeline.cast  story-e-handoff.cast  story-f-vision.cast  tacoo-tuesday.cast  tls-probe.cast
docs/demos/drivers/: cert-inspect.sh  common.sh  hierarchy.sh  key-csr.sh  tls-probe.sh
scripts/: runner-health-check.sh
tests/interop/: acme_pebble.sh  cert_roundtrip.sh  cross-validate.sh  crypto_validation.sh  lib.sh  openssl_parity.sh  scep_enroll.sh  tls_probe.sh
tools/: gen-flex-demo.py  gen-shorts.py  gen-signing-demo.py
tools/gen-signing-certs/: Cargo.toml
tools/gen-signing-certs/src/: main.rs
