[workspace]
resolver = "2"
members = [
    "crates/pki-client",
    "crates/pki-client-output",
    "crates/pki-probe",
    "crates/pki-hierarchy",
    "tools/gen-signing-certs",
    "vendor/spork-core",
]

[workspace.package]
version = "0.5.0-beta.2"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.88.0"
repository = "https://github.com/rayketcham-lab/pki-client"

[workspace.dependencies]
# Shared utilities
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.8"
anyhow = "1"

# CLI dependencies
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
clap_mangen = "0.2"
rustyline = "14"
colored = "2"
humantime = "2"

# TUI dependencies
tabled = "0.15"

# Async runtime
tokio = { version = "1.44", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots", "rustls-tls-webpki-roots", "blocking"], default-features = false }

# TLS / crypto
rustls = { version = "0.23", features = ["aws-lc-rs", "prefer-post-quantum"] }
rustls-native-certs = "0.8"
webpki-roots = "0.26"

# Certificate parsing
x509-parser = "0.16"
pem = "3"
base64 = "0.22"
der = { version = "0.7", features = ["std"] }

# Testing
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# Internal crates
pki-client-output = { path = "crates/pki-client-output" }
pki-probe = { path = "crates/pki-probe" }
pki-hierarchy = { path = "crates/pki-hierarchy" }

# CA engine (vendored from spork-ca-engine)
spork-core = { path = "vendor/spork-core" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1  # Faster crypto operations in dev
