[package]
name = "pki-client-output"
description = "Output formatting library for PKI CLI client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
tabled = { workspace = true }

# Certificate parsing
x509-parser = { workspace = true }
pem = { workspace = true }

# Hashing for fingerprints
sha1 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# OID registry TOML loading
toml = { workspace = true }
