[package]
name = "pki-client"
description = "Modern PKI operations tool — certificate inspection, key management, TLS probing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false  # depends on vendored spork-core (path dep); distribute via GitHub Releases

[[bin]]
name = "pki"
path = "src/main.rs"

[features]
default = []
pqc = ["spork-core/pqc", "pki-hierarchy/pqc"]
fips = ["spork-core/fips"]

[dependencies]
# Internal crates
spork-core = { workspace = true }
pki-client-output = { workspace = true }
pki-probe = { workspace = true }
pki-hierarchy = { workspace = true }

# CLI framework
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
rustyline = { workspace = true }

# Output
colored = { workspace = true }
tabled = { workspace = true }

# Utilities
chrono = { workspace = true }
humantime = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Certificate handling
pem = { workspace = true }
x509-parser = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
der = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# URL parsing (for SSRF validation)
url = "2.5"

# Config directory detection
dirs = "5"

# POSIX constants (O_NOFOLLOW, ELOOP) for symlink-refusing file writes
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
const-oid = "0.9"
der = { workspace = true }

# ── Linux package metadata ──────────────────────────────────────────
# Both packages ship the statically-linked musl binary — zero runtime deps.
# Build with: cargo build --release --features pqc --target x86_64-unknown-linux-musl
# Package with:
#   cargo deb --no-build --target x86_64-unknown-linux-musl -p pki-client
#   cargo generate-rpm --target x86_64-unknown-linux-musl -p crates/pki-client

[package.metadata.deb]
name = "pki-client"
maintainer = "Ray Ketcham <rayketcham@ogjos.com>"
copyright = "2026, Ray Ketcham <rayketcham@ogjos.com>"
license-file = ["../../LICENSE", "0"]
extended-description = """\
Modern PKI CLI tool — certificate inspection, key management, TLS probing, \
compliance validation, DANE, and chain building. Pure Rust, no OpenSSL \
dependency. Statically linked with musl — zero runtime dependencies."""
section = "utils"
priority = "optional"
depends = ""
assets = [
    ["target/x86_64-unknown-linux-musl/release/pki", "usr/bin/", "755"],
    ["../../README.md", "usr/share/doc/pki-client/README.md", "644"],
    ["../../LICENSE", "usr/share/doc/pki-client/LICENSE", "644"],
]

[package.metadata.generate-rpm]
name = "pki-client"
summary = "Modern PKI CLI — cert inspection, key management, TLS probing"
license = "Apache-2.0"
assets = [
    { source = "target/x86_64-unknown-linux-musl/release/pki", dest = "/usr/bin/pki", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/pki-client/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/doc/pki-client/LICENSE", mode = "644", doc = true },
]
