[package]
name = "pki-client"
description = "Modern PKI operations tool — certificate inspection, key management, TLS probing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false  # depends on vendored spork-core (path dep); distribute via GitHub Releases

[[bin]]
name = "pki"
path = "src/main.rs"

[features]
default = []
pqc = ["spork-core/pqc", "pki-hierarchy/pqc"]
fips = ["spork-core/fips"]

[dependencies]
# Internal crates
spork-core = { workspace = true }
pki-client-output = { workspace = true }
pki-probe = { workspace = true }
pki-hierarchy = { workspace = true }

# CLI framework
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
rustyline = { workspace = true }

# Output
colored = { workspace = true }
tabled = { workspace = true }

# Utilities
chrono = { workspace = true }
humantime = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Certificate handling
pem = { workspace = true }
x509-parser = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
der = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# URL parsing (for SSRF validation)
url = "2.5"

# Config directory detection
dirs = "5"

# POSIX constants (O_NOFOLLOW, ELOOP) for symlink-refusing file writes
[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
const-oid = "0.9"
der = { workspace = true }

