[package]
name = "pki-hierarchy"
description = "Declarative PKI hierarchy builder"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
publish = false  # depends on spork-core (git dep, not on crates.io)

[dependencies]
spork-core = { workspace = true, features = ["ceremony"] }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
zeroize = { version = "1.8", features = ["derive"] }
hex = { workspace = true }
const-oid = "0.9"
chrono = { workspace = true }

[features]
pqc = ["spork-core/pqc"]
