[package]
name = "pki-probe"
description = "TLS server probing and certificate linting"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# TLS probing
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
webpki-roots = { workspace = true }

# Certificate parsing
x509-parser = { workspace = true }
pem = { workspace = true }
base64 = { workspace = true }
der = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }

[features]
default = []
fips = ["spork-core/fips"]

[dev-dependencies]
tokio = { version = "1.44", features = ["full", "macros"] }
spork-core = { workspace = true }
der = { workspace = true }
