[package]
name = "gen-signing-certs"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "gen-signing-certs"
path = "src/main.rs"

[dependencies]
spork-core = { workspace = true, features = ["pqc"] }
p12-keystore = "0.2"
sha2 = "0.10"
const-oid = "0.9"
der = { version = "0.7", features = ["std"] }
anyhow = "1"
